--- a/arch/arm/configs/odroidxu3_defconfig
+++ b/arch/arm/configs/odroidxu3_defconfig
@@ -2275,7 +2275,7 @@ CONFIG_SND_SOC_DUMMY_CODEC=y
 CONFIG_HID=y
 # CONFIG_HID_BATTERY_STRENGTH is not set
 # CONFIG_HIDRAW is not set
-# CONFIG_UHID is not set
+CONFIG_UHID=y
 CONFIG_HID_GENERIC=y
 
 #
