ODROID: touch: Add D-WAV Multitouch driver.
Conflicts:
	arch/arm64/configs/odroidc2_defconfig
	drivers/hid/hid-core.c
	drivers/input/touchscreen/Kconfig
	drivers/input/touchscreen/Makefile

Change-Id: Ia1c8c29d3f69c6ba5d630279c4cc98119b68ab71

--- a/arch/arm64/configs/odroidn1_defconfig
+++ b/arch/arm64/configs/odroidn1_defconfig
@@ -1105,7 +1105,9 @@ CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
+CONFIG_WANT_DEV_COREDUMP=y
 CONFIG_ALLOW_DEV_COREDUMP=y
+CONFIG_DEV_COREDUMP=y
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
@@ -1871,6 +1873,7 @@ CONFIG_TOUCHSCREEN_GT9XX=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
 # CONFIG_TOUCHSCREEN_ROHM_BU21023 is not set
+CONFIG_TOUCHSCREEN_DWAV_USB_MT=y
 CONFIG_ROCKCHIP_REMOTECTL=y
 CONFIG_ROCKCHIP_REMOTECTL_PWM=y
 
