--- a/arch/arm64/configs/odroidn1_defconfig
+++ b/arch/arm64/configs/odroidn1_defconfig
@@ -1206,6 +1206,8 @@ CONFIG_ROCKCHIP_SCR=y
 # CONFIG_TI_DAC7512 is not set
 # CONFIG_BMP085_I2C is not set
 # CONFIG_BMP085_SPI is not set
+CONFIG_SI1132=m
+CONFIG_SI702X=m
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 CONFIG_SRAM=y
