--- a/arch/arm64/boot/dts/rockchip/rk3399-odroidn1.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-odroidn1.dtsi
@@ -62,6 +62,17 @@
 		};
 	};
 
+	fan0: pwm-fan {
+		compatible = "pwm-fan";
+		status = "okay";
+		pwms = <&pwm0 0 42000 1>; /* 24 kHz */
+
+		cooling-min-state = <0>;
+		cooling-max-state = <3>;
+		#cooling-cells = <2>;
+		cooling-levels = <0 100 150 200>; /* PWM duty cycle */
+	};
+
 	clkin_gmac: external-gmac-clock {
 		compatible = "fixed-clock";
 		clock-frequency = <125000000>;
