ARM64/dts: add a custom cluster0/1_opp table including 1.5GHz/1.9GHz
Change-Id: I22e45f630f4aa86420f12c607959ea5b24b1ddff

--- a/arch/arm64/boot/dts/rockchip/rk3399-opp.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-opp.dtsi
@@ -78,6 +78,11 @@
 			opp-microvolt = <1125000>;
 			clock-latency-ns = <40000>;
 		};
+		opp-1512000000 {
+			opp-hz = /bits/ 64 <1512000000>;
+			opp-microvolt = <1125000>;
+			clock-latency-ns = <40000>;
+		};
 	};
 
 	cluster1_opp: opp-table1 {
@@ -123,6 +128,11 @@
 		opp@1800000000 {
 			opp-hz = /bits/ 64 <1800000000>;
 			opp-microvolt = <1200000>;
+			clock-latency-ns = <40000>;
+		};
+		opp@1992000000 {
+			opp-hz = /bits/ 64 <1992000000>;
+			opp-microvolt = <1250000>;
 			clock-latency-ns = <40000>;
 		};
 	};
