odroid-sysfs: add odroid-sysfs including boot mode detection
Change-Id: I77954dde91d2f85bc57d00173b79a1922cbaf2bf

--- a/arch/arm64/configs/odroidn1_defconfig
+++ b/arch/arm64/configs/odroidn1_defconfig
@@ -4321,6 +4321,11 @@ CONFIG_RK_NAND=y
 CONFIG_RK_HEADSET=y
 
 #
+# Hardkernel features
+#
+CONFIG_ODROIDN1_SYSFS=y
+
+#
 # Firmware Drivers
 #
 CONFIG_ARM_PSCI_FW=y
