--- a/arch/arm64/boot/dts/rockchip/rk3399-odroidn1.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-odroidn1.dtsi
@@ -181,6 +181,11 @@
 		rockchip,pwm_id= <2>;
 		rockchip,pwm_voltage = <1000000>;
 	};
+
+	odroid_sysfs: odroid-sysfs {
+		status = "okay";
+		compatible = "odroid-sysfs";
+	};
 };
 
 &cpu_l0 {
