ARM64/dts: Add gpio-restart devicetree to handle cold reset
This commit is to activate cold reset by handling OTP_OUT_H
and it makes RK808 to enter cold reset status.
- OTP_OUT_H : GPIO1_A6 (Active High)

Change-Id: I2e25fd76160a10bf8768fa14aa8a625d8cef7c5a

--- a/arch/arm64/boot/dts/rockchip/rk3399-odroidn1.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-odroidn1.dtsi
@@ -186,6 +186,13 @@
 		status = "okay";
 		compatible = "odroid-sysfs";
 	};
+
+	gpio-restart {
+		compatible = "gpio-restart";
+		gpios = <&gpio1 6 GPIO_ACTIVE_HIGH>;
+		open-source;
+		priority = <255>; /* Highest priority */
+	};
 };
 
 &cpu_l0 {
