arm64/dts,config: remove fairchild type-c controller
Change-Id: Ifa6f4bdeb9508ab8bc2a259013a71948cdd00371

--- a/arch/arm64/configs/odroidn1_defconfig
+++ b/arch/arm64/configs/odroidn1_defconfig
@@ -2535,7 +2535,7 @@ CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_WM831X_SPI is not set
 # CONFIG_MFD_WM8350_I2C is not set
 # CONFIG_MFD_WM8994 is not set
-CONFIG_FUSB_30X=y
+# CONFIG_FUSB_30X is not set
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
