arm64/dts: fix some of rk808 pmic configuration
- set LDO2 as off by default (nc)
- fix vddio's source (vcc_3v0)

Change-Id: Ie0c0741260deadb586bedec895c92eb5705c7d12

--- a/arch/arm64/boot/dts/rockchip/rk3399-odroidn1.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-odroidn1.dtsi
@@ -309,7 +309,7 @@
 		vcc10-supply = <&vcc3v3_sys>;
 		vcc11-supply = <&vcc3v3_sys>;
 		vcc12-supply = <&vcc3v3_sys>;
-		vddio-supply = <&vcc1v8_pmu>;
+		vddio-supply = <&vcc_3v0>;
 
 		regulators {
 			vdd_center: DCDC_REG1 {
@@ -369,8 +369,6 @@
 			};
 
 			vcc3v0_tp: LDO_REG2 {
-				regulator-always-on;
-				regulator-boot-on;
 				regulator-min-microvolt = <3000000>;
 				regulator-max-microvolt = <3000000>;
 				regulator-name = "vcc3v0_tp";
